Bug: PRD Reviewer: Lynn Comment: added width: 330px to the About Me section because when about me is populated with text, it doesn't wrap or flow correctly in the space.

--- a/ssf/gwt/src/org/kablink/teaming/gwt/public/GwtTeaming.css
+++ b/ssf/gwt/src/org/kablink/teaming/gwt/public/GwtTeaming.css
@@ -4963,7 +4963,7 @@ td.datePickerMonth {
 /* End:  Import profiles dialog styles. */
 
 /* Start:  User properties dialog styles. */
-	.vibe-userPropertiesDlg-aboutMe          {}
+	.vibe-userPropertiesDlg-aboutMe          {width: 330px;}
 	.vibe-userPropertiesDlg-attrCaption      {font-weight: bold; padding-right: 3px;}
 	.vibe-userPropertiesDlg-attrImage        {}	
 	.vibe-userPropertiesDlg-attrValue        {}
